--- a/index.html
+++ b/index.html
@@ -196,33 +196,60 @@
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="list work-list">
             <li class="work-list__item">
-              <img
-                class="work-list__image"
-                src="./images/img-list-1.jpg"
-                alt="Мобільні додатки"
-                width="370"
-                height="294"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/work/img-work-desk-1.jpg    1x,
+                    ./images/work/img-work-desk-1-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <img
+                  class="work-list__image"
+                  src="./images/work/img-work-desk-1.jpg "
+                  alt="Десктопні додатки"
+                  width="370"
+                  height="294"
+                />
+              </picture>
               <p class="work-list__descr">Десктопні додатки</p>
             </li>
             <li class="work-list__item">
-              <img
-                class="work-list__image"
-                src="./images/img-list-2.jpg"
-                alt="Мобільні додатки"
-                width="370"
-                height="294"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/work/img-work-desk-2.jpg    1x,
+                    ./images/work/img-work-desk-2-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <img
+                  class="work-list__image"
+                  src="./images/work/img-work-desk-2.jpg "
+                  alt="Мобільні додатки"
+                  width="370"
+                  height="294"
+                />
+              </picture>
               <p class="work-list__descr">Мобільні додатки</p>
             </li>
             <li class="work-list__item">
-              <img
-                class="work-list__image"
-                src="./images/img-list-3.jpg"
-                alt="Розробка дизайну"
-                width="370"
-                height="294"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/work/img-work-desk-3.jpg    1x,
+                    ./images/work/img-work-desk-3-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <img
+                  class="work-list__image"
+                  src="./images/work/img-work-desk-3.jpg "
+                  alt="Дизайнерські рішення"
+                  width="370"
+                  height="294"
+                />
+              </picture>
               <p class="work-list__descr">Дизайнерські рішення</p>
             </li>
           </ul>
