--- a/portfolio.html
+++ b/portfolio.html
@@ -156,13 +156,37 @@
             <li class="card">
               <a href="" class="link">
                 <div class="card__wrap">
-                  <img
-                    srcset="./images/portfolio/img-portfolio-mob-1.jpg"
-                    class="card__image"
-                    src="./images/portfolio/img-portfolio-mob-1.jpg"
-                    alt="Сторінка сайту Технокряк"
-                    sizes=""
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-desk-1.jpg    1x,
+                        ./images/portfolio/img-portfolio-desk-1-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-tab-1.jpg    1x,
+                        ./images/portfolio/img-portfolio-tab-1-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-mob-1.jpg    1x,
+                        ./images/portfolio/img-portfolio-mob-1-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="card__image"
+                      src="./images/portfolio/img-portfolio-mob-1.jpg"
+                      alt="Веб-сайт"
+                    />
+                  </picture>
+
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -178,13 +202,36 @@
             <li class="card">
               <a href="" class="link">
                 <div class="card__wrap">
-                  <img
-                    srcset="./images/portfolio/img-portfolio-mob-2.jpg"
-                    class="card__image"
-                    src="./images/portfolio/img-portfolio-mob-2.jpg"
-                    alt="Сторінка сайту Технокряк"
-                    sizes=""
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-desk-2.jpg    1x,
+                        ./images/portfolio/img-portfolio-desk-2-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-tab-2.jpg    1x,
+                        ./images/portfolio/img-portfolio-tab-2-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-mob-2.jpg    1x,
+                        ./images/portfolio/img-portfolio-mob-2-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="card__image"
+                      src="./images/portfolio/img-portfolio-mob-2.jpg"
+                      alt="Постер"
+                    />
+                  </picture>
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -202,13 +249,36 @@
             <li class="card">
               <a href="" class="link">
                 <div class="card__wrap">
-                  <img
-                    srcset="./images/portfolio/img-portfolio-mob-3.jpg"
-                    class="card__image"
-                    src="./images/portfolio/img-portfolio-mob-3.jpg"
-                    alt="Ігор Дем'яненко фото"
-                    sizes=""
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-desk-3.jpg    1x,
+                        ./images/portfolio/img-portfolio-desk-3-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-tab-3.jpg    1x,
+                        ./images/portfolio/img-portfolio-tab-3-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-mob-3.jpg    1x,
+                        ./images/portfolio/img-portfolio-mob-3-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="card__image"
+                      src="./images/portfolio/img-portfolio-mob-3.jpg"
+                      alt="Додаток"
+                    />
+                  </picture>
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -224,13 +294,36 @@
             <li class="card">
               <a href="" class="link">
                 <div class="card__wrap">
-                  <img
-                    srcset="./images/portfolio/img-portfolio-mob-4.jpg"
-                    class="card__image"
-                    src="./images/portfolio/img-portfolio-mob-4.jpg"
-                    alt="Ігор Дем'яненко фото"
-                    sizes=""
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-desk-4.jpg    1x,
+                        ./images/portfolio/img-portfolio-desk-4-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-tab-4.jpg    1x,
+                        ./images/portfolio/img-portfolio-tab-4-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-mob-4.jpg    1x,
+                        ./images/portfolio/img-portfolio-mob-4-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="card__image"
+                      src="./images/portfolio/img-portfolio-mob-4.jpg"
+                      alt="Маркетинг"
+                    />
+                  </picture>
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -246,13 +339,36 @@
             <li class="card">
               <a href="" class="link">
                 <div class="card__wrap">
-                  <img
-                    srcset="./images/portfolio/img-portfolio-mob-5.jpg"
-                    class="card__image"
-                    src="./images/portfolio/img-portfolio-mob-5.jpg"
-                    alt="Ігор Дем'яненко фото"
-                    sizes=""
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-desk-5.jpg    1x,
+                        ./images/portfolio/img-portfolio-desk-5-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-tab-5.jpg    1x,
+                        ./images/portfolio/img-portfolio-tab-5-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-mob-5.jpg    1x,
+                        ./images/portfolio/img-portfolio-mob-5-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="card__image"
+                      src="./images/portfolio/img-portfolio-mob-5.jpg"
+                      alt="Додаток"
+                    />
+                  </picture>
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -268,13 +384,36 @@
             <li class="card">
               <a href="" class="link">
                 <div class="card__wrap">
-                  <img
-                    srcset="./images/portfolio/img-portfolio-mob-6.jpg"
-                    class="card__image"
-                    src="./images/portfolio/img-portfolio-mob-6.jpg"
-                    alt="Ігор Дем'яненко фото"
-                    sizes=""
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-desk-6.jpg    1x,
+                        ./images/portfolio/img-portfolio-desk-6-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-tab-6.jpg    1x,
+                        ./images/portfolio/img-portfolio-tab-6-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-mob-6.jpg    1x,
+                        ./images/portfolio/img-portfolio-mob-6-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="card__image"
+                      src="./images/portfolio/img-portfolio-mob-6.jpg"
+                      alt="Веб-сайт"
+                    />
+                  </picture>
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -290,13 +429,36 @@
             <li class="card">
               <a href="" class="link">
                 <div class="card__wrap">
-                  <img
-                    srcset="./images/portfolio/img-portfolio-mob-7.jpg"
-                    class="card__image"
-                    src="./images/portfolio/img-portfolio-mob-7.jpg"
-                    alt="Ігор Дем'яненко фото"
-                    sizes=""
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-desk-7.jpg    1x,
+                        ./images/portfolio/img-portfolio-desk-7-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-tab-7.jpg    1x,
+                        ./images/portfolio/img-portfolio-tab-7-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-mob-7.jpg    1x,
+                        ./images/portfolio/img-portfolio-mob-7-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="card__image"
+                      src="./images/portfolio/img-portfolio-mob-7.jpg"
+                      alt="Дизайн"
+                    />
+                  </picture>
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -312,13 +474,36 @@
             <li class="card">
               <a href="" class="link">
                 <div class="card__wrap">
-                  <img
-                    srcset="./images/portfolio/img-portfolio-mob-8.jpg"
-                    class="card__image"
-                    src="./images/portfolio/img-portfolio-mob-8.jpg"
-                    alt="Ігор Дем'яненко фото"
-                    sizes=""
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-desk-8.jpg    1x,
+                        ./images/portfolio/img-portfolio-desk-8-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-tab-8.jpg    1x,
+                        ./images/portfolio/img-portfolio-tab-8-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-mob-8.jpg    1x,
+                        ./images/portfolio/img-portfolio-mob-8-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="card__image"
+                      src="./images/portfolio/img-portfolio-mob-8.jpg"
+                      alt="Маркетинг"
+                    />
+                  </picture>
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -334,13 +519,36 @@
             <li class="card">
               <a href="" class="link">
                 <div class="card__wrap">
-                  <img
-                    srcset="./images/portfolio/img-portfolio-mob-9.jpg"
-                    class="card__image"
-                    src="./images/portfolio/img-portfolio-mob-9.jpg"
-                    alt="Ігор Дем'яненко фото"
-                    sizes=""
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-desk-9.jpg    1x,
+                        ./images/portfolio/img-portfolio-desk-9-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-tab-9.jpg    1x,
+                        ./images/portfolio/img-portfolio-tab-9-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./images/portfolio/img-portfolio-mob-9.jpg    1x,
+                        ./images/portfolio/img-portfolio-mob-9-2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      class="card__image"
+                      src="./images/portfolio/img-portfolio-mob-9.jpg"
+                      alt="Додаток"
+                    />
+                  </picture>
                   <p class="card__descr">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
